--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                     <span class="ms-display">网盘</span>
                     <div class="url-content">
                         <span>主线路</span>
-                        <a href="https://47.121.132.75:5244/" target="_blank">
+                        <a href="http://47.121.132.75:5244/" target="_blank">
                             <i class="fas fa-external-link-alt"></i> 47.121.132.75:5244
                         </a>
                         <span class="status-badge status-normal">主线路</span>
