--- a/index.html
+++ b/index.html
@@ -436,13 +436,13 @@
                     </div>
                 </li>
                 <li>
-                    <span class="ms-display">网盘</span>
+                    <span class="ms-display">爱发电</span>
                     <div class="url-content">
                         <span>备用线路</span>
-                        <a href="https://pan.guichushijie.cn/" target="_blank">
-                            <i class="fas fa-external-link-alt"></i> pan.guichushijie.cn
+                        <a href="https://afdian.com/item/0d6ee7b6cd1811ef8cb252540025c377" target="_blank">
+                            <i class="fas fa-external-link-alt"></i> afdian.com
                         </a>
-                        <span class="status-badge status-normal">备用线路</span>
+                        <span class="status-badge status-normal">会员开通</span>
                     </div>
                 </li>
                 <li>
@@ -452,7 +452,7 @@
                         <a href="https://www.kdocs.cn/l/csKZhd7ObH6b" target="_blank">
                             <i class="fas fa-external-link-alt"></i> www.kdocs.cn
                         </a>
-                        <span class="status-badge status-normal">歌曲目录</span>
+                        <span class="status-badge status-normal">所有歌曲预览</span>
                     </div>
                 </li>
                 <!-- <li data-url="https://cn.bing.com/">
