--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         .notice {
             background-color: rgba(230, 242, 255, 0.8);
             border-left: 4px solid var(--primary-color);
+            font-size: 0.9em;
             padding: 1rem;
             margin-top: 1rem;
             border-radius: 10px;
@@ -228,13 +229,13 @@
         }
         .ms-display {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 2px;
+            left: 2px;
             font-size: 0.7em;
             padding: 2px 5px;
             border-top-left-radius: 10px;
             border-bottom-right-radius: 10px;
-            color: white;
+            color: rgba(172, 172, 172, 0.607);
             transition: background-color 0.3s ease;
         }
         .ms-checking {
@@ -427,33 +428,43 @@
             </button>
             <ul id="url-list">
                 <li>
-                    <span class="ms-display">网盘</span>
+                    <span class="ms-display">博客</span>
                     <div class="url-content">
-                        <span>主线路</span>
-                        <a href="http://47.121.132.75:5244/" target="_blank">
-                            <i class="fas fa-external-link-alt"></i> 47.121.132.75:5244
+                        <span>会员介绍</span>
+                        <a href="https://luoboy.com/goldvip.html" target="_blank">
+                            <i class="fas fa-external-link-alt"></i> luoboy.com
                         </a>
-                        <span class="status-badge status-normal">主线路</span>
+                        <!-- <span class="status-badge status-normal">详细会员介绍 →</span> -->
+                    </div>
+                </li>
+                <li>
+                    <span class="ms-display">在线网盘</span>
+                    <div class="url-content">
+                        <span>会员网盘</span>
+                        <a href="http://47.121.132.75:5244/" target="_blank">
+                            <i class="fas fa-external-link-alt"></i> 47.121.132.75
+                        </a>
+                        <!-- <span class="status-badge status-normal">会员登陆 →</span> -->
                     </div>
                 </li>
                 <li>
                     <span class="ms-display">爱发电</span>
                     <div class="url-content">
-                        <span>备用线路</span>
+                        <span>会员开通</span>
                         <a href="https://afdian.com/item/0d6ee7b6cd1811ef8cb252540025c377" target="_blank">
                             <i class="fas fa-external-link-alt"></i> afdian.com
                         </a>
-                        <span class="status-badge status-normal">会员开通</span>
+                        <!-- <span class="status-badge status-checking">会员开通 →</span> -->
                     </div>
                 </li>
                 <li>
-                    <span class="ms-display">会员</span>
+                    <span class="ms-display">金山表格</span>
                     <div class="url-content">
                         <span>歌曲目录</span>
                         <a href="https://www.kdocs.cn/l/csKZhd7ObH6b" target="_blank">
-                            <i class="fas fa-external-link-alt"></i> www.kdocs.cn
+                            <i class="fas fa-external-link-alt"></i> kdocs.cn
                         </a>
-                        <span class="status-badge status-normal">所有歌曲预览</span>
+                        <!-- <span class="status-badge status-normal">歌曲预览 →</span> -->
                     </div>
                 </li>
                 <!-- <li data-url="https://cn.bing.com/">
@@ -478,7 +489,14 @@
                 </li> -->
             </ul>
             <div class="notice">
-                <i class="fas fa-info-circle"></i> 备用线路容易宕机，推荐使用主线路，如果均访问不了请联系群主！
+                <i class="fas fa-info-circle"> 更新日志：</i></br>
+                2024/9/6 更新 28 首  共 305 首</br>
+                2024/8/6 更新 39 首  共 277 首</br>
+                2024/7/6 更新 66 首  共 238 首</br>
+                2024/3/6 更新 15 首  共 172 首</br>
+                2024/2/17 更新 23 首 共 157 首</br>
+                2024/1/12 更新 7 首  共 134 首</br>	
+            
             </div>
             <!-- <div id="stats-container"></div> -->
         </main>
