--- a/index.html
+++ b/index.html
@@ -489,14 +489,19 @@
                 </li> -->
             </ul>
             <div class="notice">
-                <i class="fas fa-info-circle"> 更新日志：</i></br>
-                2024/9/6 更新 28 首  共 305 首</br>
-                2024/8/6 更新 39 首  共 277 首</br>
-                2024/7/6 更新 66 首  共 238 首</br>
-                2024/3/6 更新 15 首  共 172 首</br>
-                2024/2/17 更新 23 首 共 157 首</br>
-                2024/1/12 更新 7 首  共 134 首</br>	
-            
+                <i class="fas fa-info-circle"> 更新日志（持续更新中）：</i></br>
+                2024年</br>
+                · 12.2 更新 22 首  共 357 首</br>
+                · 11.9 更新 18 首  共 335 首</br>
+                · 10.4 更新 12 首  共 317 首</br>
+                · 9.6 更新 28 首  共 305 首</br>
+                · 8.6 更新 39 首  共 277 首</br>
+                · 7.6 更新 66 首  共 238 首</br>
+                · 3.6 更新 15 首  共 172 首</br>
+                · 2.8 更新 23 首 共 157 首</br>
+                · 1.4 更新 7  首  共 134 首</br>	
+                2023年</br>
+                · 127首
             </div>
             <!-- <div id="stats-container"></div> -->
         </main>
