--- a/index.html
+++ b/index.html
@@ -427,6 +427,27 @@
                 <i class="fas fa-bookmark"></i> Ctrl+D 收藏本页到浏览器收藏夹
             </button>
             <ul id="url-list">
+               
+                <li>
+                    <span class="ms-display">在线网盘</span>
+                    <div class="url-content">
+                        <span>会员网盘（主）</span>
+                        <a href="http://47.121.132.75:5244/" target="_blank">
+                            <i class="fas fa-external-link-alt"></i> 主要链接
+                        </a>
+                        <!-- <span class="status-badge status-normal">会员登陆 →</span> -->
+                    </div>
+                </li>
+                <li>
+                    <span class="ms-display">在线网盘</span>
+                    <div class="url-content">
+                        <span>会员网盘（备用）</span>
+                        <a href="https://s.luoboy.com/pan" target="_blank">
+                            <i class="fas fa-external-link-alt"></i> 备用链接
+                        </a>
+                        <!-- <span class="status-badge status-normal">会员登陆 →</span> -->
+                    </div>
+                </li>
                 <li>
                     <span class="ms-display">博客</span>
                     <div class="url-content">
@@ -435,16 +456,6 @@
                             <i class="fas fa-external-link-alt"></i> luoboy.com
                         </a>
                         <!-- <span class="status-badge status-normal">详细会员介绍 →</span> -->
-                    </div>
-                </li>
-                <li>
-                    <span class="ms-display">在线网盘</span>
-                    <div class="url-content">
-                        <span>会员网盘</span>
-                        <a href="http://47.121.132.75:5244/" target="_blank">
-                            <i class="fas fa-external-link-alt"></i> 47.121.132.75
-                        </a>
-                        <!-- <span class="status-badge status-normal">会员登陆 →</span> -->
                     </div>
                 </li>
                 <li>
